# aquarium-seagrass

./: CMakeLists.txt  CREDITS.md  README.md
.github/workflows/: cmake.yml  memcheck.yml
cmake/: FetchAquariumCMocka.cmake  FetchAquariumSeaUrchin.cmake
doc/: Conventions.md
include/: seagrass.h
include/seagrass/: error.h  float.h  size_t.h  uintmax_t.h
src/: error.c  float.c  seagrass.c  size_t.c  uintmax_t.c
src/test/: cmocka.c  cmocka.h  wrap.c  wrap.h
test/: test_float.c  test_seagrass.c  test_size_t.c  test_uintmax_t.c
